카테고리 수정1

--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: About
-description: /
+title:
+description:
 background: '/img/bg-main-th.jpg'
 ---
 
-<p>NEXT COMMA NEW THING!</p>
+<p><b>NEXT COMMA NEW THING!</b></p>
 <br>
 <p>콤마 뒤에는 언제나 새 문장이 시작됩니다.
-내 인생에 수많은 쉼표들이 찍혀 쉬어가기도 하면서
+인생에 수많은 쉼표들이 찍혀 쉬어가기도 하면서
 새로운 지식에 대해 갈망하고 욕망하고 탐구하고 싶습니다.</p>
