--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title:
 description:
 background: '/img/bg-main-th.jpg'
 ---
-<img src="img/posts/bg-main-th.jpg" alt="콤마로고이미지">
+<img src="/img/posts/bg-main-th.jpg" alt="콤마로고이미지">
 <p><b>NEXT COMMA NEW THING!</b></p>
 <br>
 <p>콤마 뒤에는 언제나 새 문장이 시작됩니다.
